---------------------------------------------------------------

INCOMPATIBLE CHANGES SINCE 2.6.x
================================

- wxFontData::GetColour() now returns a const colour
- wxDC objects can't be created directly now (this never worked, now it doesn't
  even compile)
- For all wxInputStreams, Eof() becomes true after an attempt has been made
  to read _past_ the end of file.

Deprecated methods since 2.6.x and their replacements
-----------------------------------------------------

- wxGetWorkingDirectory() deprecated in favour of wxGetCwd()
- wxDC::BeginDrawing() and wxDC::EndDrawing() deprecated, just don't use them


2.7.0
-----

All:

- wxLaunchDefaultBrowser() now supports wxBROWSER_NEW_WINDOW flag
- Added wxStringTokenizer::GetLastDelimiter(); improved documentation
- Speed improvements to wxRegEx when matching is done in a loop such as
  during a search and replace.
- Fix regerror and regfree name conficts when built-in regex and system regex
  are both used in the same program.
- Basic authentication supported added to wxHTTP.
- wxCondition::WaitTimeout() now returns correct value when timeout occurs.
- Fixed occasional wxThread cleanup crash.
- Bug in wxLogStream::DoLogString in Unicode builds fixed.
- Added support for memo fields to wxODBC.
- Fixed Unicode builds using SunPro compiler by defining__WCHAR_TYPE__.
- wxFileName now also looks for TMPDIR on Unix.
- Fixed build error in list.h with VC++ 2005.
- Fixed wxODBC buffer overflow problem in Unicode builds.
- Fixed wxSocketBase::InterruptWait on wxBase.
- Important code cleanup (Paul Cornett)
- Added support for wxLongLong in wx stream classes (Mark Junker)
- wxSOCKET_REUSEADDR can be used with wxSocketClient.
- Overloaded Connect() and SetLocal() methods for binding to local address/port.
- All GetCount() methods now return size_t and not int
- Albanian translation added (Besnik Bleta)

All (GUI):

- Added wxTreebook (uses a wxTreeCtrl to control pages).